log
Thu 16 May 2024 09:31:07 PM UTC: 
 tests:  0|5
total_score: 0/70
b2c5aae
Thu 16 May 2024 09:51:28 PM UTC: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|5
total_score: 0/70
e97eba4
Thu 16 May 2024 09:51:44 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:4: error: parameter ‘list’ is initialized
   58 |    List* list=createList();
      |    ^~~~
sudoku.c:59:4: error: expected declaration specifiers before ‘for’
   59 |    for (i=0 ; i<9 ; i++){
      |    ^~~
sudoku.c:59:15: error: expected declaration specifiers before ‘i’
   59 |    for (i=0 ; i<9 ; i++){
      |               ^
sudoku.c:59:21: error: expected declaration specifiers before ‘i’
   59 |    for (i=0 ; i<9 ; i++){
      |                     ^
sudoku.c:70:4: error: expected declaration specifiers before ‘return’
   70 |    return list;
      |    ^~~~~~
sudoku.c:71:1: error: expected declaration specifiers before ‘}’ token
   71 | }
      | ^
sudoku.c:74:22: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   74 | int is_final(Node* n){
      |                      ^
sudoku.c:78:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   78 | Node* DFS(Node* initial, int* cont){
      |                                    ^
test.c:7:34: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
    7 | char * _strdup(const char * str) {
      |                                  ^
test.c:14:1: error: parameter ‘test_id’ is initialized
   14 | int test_id = -1;
      | ^~~
test.c:17:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   17 | int success(){
      |              ^
test.c:22:24: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   22 | void err_msg(char* msg){
      |                        ^
test.c:29:23: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   29 | void ok_msg(char* msg){
      |                       ^
test.c:35:25: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   35 | void info_msg(char* msg){
      |                         ^
test.c:40:75: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   40 | int test_suite(int(*test)(), char* msg, int max_score, int id, int req_id){
      |                                                                           ^
test.c:57:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
   57 | int adj_test1(){
      |                ^
test.c:106:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  106 | int test_isvalid(){
      |                   ^
test.c:150:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  150 | int test_mod_adj(){
      |                   ^
test.c:176:19: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  176 | int test_isfinal(){
      |                   ^
test.c:201:15: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  201 | int test_dfs(){
      |               ^
test.c:245:36: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
  245 | int main( int argc, char *argv[] ) {
      |                                    ^
In file included from test.c:5:
sudoku.c:56:7: error: old-style parameter declarations in prototyped function definition
   56 | List* get_adj_nodes(Node* n)
      |       ^~~~~~~~~~~~~
test.c:263: error: expected ‘{’ at end of input
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
2363285
Thu 16 May 2024 09:51:50 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0b8a918
Thu 16 May 2024 09:52:59 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|5
total_score: 0/70
43a0e1a
Thu 16 May 2024 09:53:07 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:68:14: error: ‘NUL’ undeclared (first use in this function); did you mean ‘NULL’?
   68 |       return NUL;
      |              ^~~
      |              NULL
sudoku.c:68:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c096255
Thu 16 May 2024 09:53:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d60bb23
Thu 16 May 2024 09:59:00 PM UTC: 
 sudoku.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:62:24: error: array subscript 9 is above array bounds of ‘int[9]’ [-Werror=array-bounds]
   62 |          if (n->sudo[i][k] == 0){
      |              ~~~~~~~~~~^~~
sudoku.c:8:8: note: while referencing ‘sudo’
    8 |    int sudo[9][9];
      |        ^~~~
cc1: all warnings being treated as errors
Compilation failed
0be0130
Thu 16 May 2024 09:59:11 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
c6f6369
Thu 16 May 2024 10:12:04 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:13: error: unused variable ‘lista’ [-Werror=unused-variable]
   58 |       List *lista = createList();
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
a2b5b08
Thu 16 May 2024 10:12:41 PM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:58:13: error: unused variable ‘lista’ [-Werror=unused-variable]
   58 |       List *lista = createList();
      |             ^~~~~
cc1: all warnings being treated as errors
Compilation failed
f03e920
Thu 16 May 2024 10:12:56 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|4
total_score: 10/70
c59a0ac
Thu 16 May 2024 10:13:43 PM UTC: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:109:13: error: unused variable ‘n’ [-Werror=unused-variable]
  109 |       Node* n = top(s);
      |             ^
cc1: all warnings being treated as errors
Compilation failed
017985d
Thu 16 May 2024 10:13:51 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|4
total_score: 10/70
d93acaa
Thu 16 May 2024 10:14:01 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:114:13: error: unused variable ‘list’ [-Werror=unused-variable]
  114 |       List* list = get_adj_nodes(n);
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
dd4e668
Thu 16 May 2024 10:14:40 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|4
total_score: 10/70
168c6d9
Thu 16 May 2024 10:16:04 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|4
total_score: 10/70
a4e3042
